--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,20 @@ nav ul li a:hover::after {
 
 .imae{
     width: 35%;
-    height: 100%;
-    padding-top: 150px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 130px;
+    animation: imageSlideIn 1.5s ease-in-out;
 }
 .imae img{
-    width: 400px;
-    height: 500px;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    border-radius: 15px;
+    transition: transform 0.5s ease;
+    object-fit: cover;
 }
 .header-text h1 {
     font-size: 60px;
