--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
+
 body {
     background: #080808;
     color: #fff;
@@ -18,7 +20,7 @@ body {
 }
 
 .container {
-    padding:10px 10%;
+    padding: 10px 10%;
     height: 100%;
 }
 
@@ -28,14 +30,15 @@ nav {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.ha{
+
+.ha {
     width: 100%;
     height: auto;
     display: flex;
     flex-wrap: wrap;
     height: 95%;
-    
 }
+
 .logo {
     width: 140px;
 }
@@ -74,7 +77,7 @@ nav ul li a:hover::after {
     font-size: 30px;
 }
 
-.imae{
+.imae {
     width: 35%;
     height: auto;
     display: flex;
@@ -83,7 +86,8 @@ nav ul li a:hover::after {
     padding-top: 130px;
     animation: imageSlideIn 1.5s ease-in-out;
 }
-.imae img{
+
+.imae img {
     width: 100%;
     max-width: 100%;
     height: auto;
@@ -91,50 +95,63 @@ nav ul li a:hover::after {
     transition: transform 0.5s ease;
     object-fit: cover;
 }
+
 .header-text h1 {
     font-size: 60px;
     margin-top: 20px;
 }
-.header-text h1 span{
+
+.header-text h1 span {
     color: #ff0000;
 }
-/* ------------about---------- */
-#about{
-    padding: 80px 0;
+
+/* ------------ About Section ---------- */
+#about {
+    padding: 80px 10%;
     color: #ababab;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.about-col-1{
+
+.about-col-1 {
     flex-basis: 35%;
 }
-.about-col-1 img{
+
+.about-col-1 img {
     width: 100%;
     border-radius: 15px;
 }
-.about-col-2{
+
+.about-col-2 {
     flex-basis: 60%;
 }
-.sub-title{
+
+.sub-title {
     font-size: 60px;
     font-weight: 600;
     color: #fff;
 }
-.tab-title{
+
+.tab-title {
     display: flex;
     margin: 20px 0 40px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-.tab-links{
+
+.tab-links {
     margin-right: 50px;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
     position: relative;
 }
-.tab-links::after{
+
+.tab-links::after {
     content: '';
     width: 0;
     height: 3px;
@@ -144,34 +161,42 @@ nav ul li a:hover::after {
     bottom: -8px;
     transition: 0.5s;
 }
-.tab-links.active-link::after{
+
+.tab-links.active-link::after {
     width: 50%;
 }
-.tab-contents ul li{
+
+.tab-contents ul li {
     list-style: none;
     margin: 10px 0;
 }
-.tab-contents ul li span{
+
+.tab-contents ul li span {
     color: #ff0000;
     font-size: 14px;
 }
-.tab-contents{
+
+.tab-contents {
     display: none;
 }
-.tab-contents.active-tab{
+
+.tab-contents.active-tab {
     display: block;
 }
-/* -------------Services--------------- */
-#services{
-    padding: 30px 0;
+
+/* ------------- Services Section --------------- */
+#services {
+    padding: 30px 10%;
 }
-.services-list{
+
+.services-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.services-list div{
+
+.services-list div {
     background: #262626;
     padding: 40px;
     font-size: 13px;
@@ -179,51 +204,63 @@ nav ul li a:hover::after {
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
 }
-.services-list div i{
+
+.services-list div i {
     font-size: 50px;
     margin-bottom: 30px;
 }
-.services-list div h2{
+
+.services-list div h2 {
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
 }
-.services-list div a{
+
+.services-list div a {
     text-decoration: none;
     color: #fff;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
 }
-.services-list div:hover{
+
+.services-list div:hover {
     background: #ff0000;
     transform: translateY(-20px);
 }
-/* -----------portfolio------------- */
-#portfolio{
-    padding: 50px 0;  
+
+/* ----------- Portfolio Section ------------- */
+#portfolio {
+    padding: 50px 10%;
 }
-.work-list{
+
+.work-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.work{
+
+.work {
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+    height: 300px;
 }
-.work img{
+
+.work img {
     width: 100%;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
+    height: 100%;
+    object-fit: cover;
 }
-.layer{
+
+.layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff0000);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), #ff0000);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -238,11 +275,13 @@ nav ul li a:hover::after {
     font-size: 14px;
     transition: height 0.5s;
 }
-.layer h3{
+
+.layer h3 {
     font-weight: 500;
     margin-bottom: 20px;
 }
-.layer a{
+
+.layer a {
     margin-top: 20px;
     color: #ff0000;
     text-decoration: none;
@@ -253,13 +292,17 @@ nav ul li a:hover::after {
     border-radius: 50%;
     text-align: center;
 }
-.work:hover img{
+
+.work:hover img {
     transform: scale(1.1);
 }
-.work:hover .layer{
+
+.work:hover .layer {
     height: 100%;
 }
-.btn{
+
+/* Button Styling */
+.btn {
     display: block;
     margin: 50px auto;
     width: fit-content;
@@ -270,33 +313,69 @@ nav ul li a:hover::after {
     color: #fff;
     transition: background 0.5s;
 }
-.btn:hover{
+
+.btn:hover {
     background: #ff0000;
 }
-@media screen and (min-width:200px) and (max-width:900px) {
-    .imae{
-        display: none;
-    }
+
+/* Hidden Work List Section */
+.hidden-items {
+    max-height: 0;
+    max-width: 66%;
+    overflow: hidden;
+    opacity: 0;
+    visibility: hidden;
+    transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
 }
-/* ----------contact---------- */
+
+.hidden-item {
+    max-height: 0;
+    max-width: 66%;
+    overflow: hidden;
+    opacity: 0;
+    visibility: hidden;
+    transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}
+
+.hidden-items.show {
+    max-height: 1000px;
+    opacity: 1;
+    visibility: visible;
+}
+
+.hidden-item.show {
+    max-height: 1000px;
+    opacity: 1;
+    visibility: visible;
+}
+
+/* Contact Section */
 .contact-left{
     flex-basis: 35%;
 }
 .contact-right{
     flex-basis: 60%;
 }
-.contact-left p{
+.contact-left p {
     margin-top: 30px;
 }
-.contact-left p i{
+
+.contact-left p i {
     color: #ff0000;
     margin-right: 15px;
     font-size: 25px;
 }
-.social-icons{
+
+#phone-number-link {
+    color: white;
+    text-decoration: none;
+}
+
+.social-icons {
     margin-top: 30px;
 }
-.social-icons a{
+
+.social-icons a {
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
@@ -304,18 +383,22 @@ nav ul li a:hover::after {
     display: inline-block;
     transition: transform 0.5s;
 }
-.social-icons a:hover{
+
+.social-icons a:hover {
     color: #ff0000;
     transform: translateY(-5px);
 }
-.btn.btn2{
+
+.btn.btn2 {
     display: inline-block;
     background: #ff0000;
 }
-.contact-right form{
+
+.contact-right form {
     width: 100%;
 }
-form input, form textarea{
+
+form input, form textarea {
     width: 100%;
     border: 0;
     outline: none;
@@ -326,13 +409,20 @@ form input, form textarea{
     font-size: 18px;
     border-radius: 6px;
 }
-form .btn2{
+
+.request {
+    font-size: 18px;
+    cursor: pointer;
+}
+
+form .btn2 {
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
 }
-.copyright{
+
+.copyright {
     width: 100%;
     text-align: center;
     padding: 25px 0;
@@ -340,73 +430,122 @@ form .btn2{
     font-weight: 300;
     margin-top: 20px;
 }
-.copyright a{
+
+.copyright a {
     color: #fff;
     text-decoration: none;
 }
-/* ----------css for small screen---------- */
-nav .fa-solid{
+
+/* Responsive Styles */
+nav .fa-solid {
     display: none;
 }
-@media only screen and (max-width: 600px){
-    /* .header-text{
-        margin-top: 100%;
-        font-size: 16px;
+
+/* Responsive Styles */
+@media only screen and (max-width: 600px) {     
+    .imae {
+        display: none;
     }
-    .header-text h1{
-        font-size: 30px;
-    } */
-    nav .fa-solid{
+    #about {
+        padding-top: 20px; /* Reduced padding to fit content */
+    }
+    .header-text {
+        width: 100%;
+        margin-top: 160px; /* Reduced top margin to decrease the gap */
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .header-text h1 {
+        font-size: 70px;
+    } 
+
+    nav .fa-solid {
         display: block;
         font-size: 25px;
     }
-    nav ul{
-        background: #ff0000;
+
+    nav ul {
+        background: #ff0000; /* Full red background */
         position: fixed;
         top: 0;
         right: -200px;
-        width: 200px;
-        height: 100vh;
+        width: 150px;
+        height: auto; /* Changed from 100vh to auto */
         padding-top: 50px;
         z-index: 2;
-        transition: right 0.5s;
+        transition: right 0.6s;
+        border-radius: 20px 0 0 20px; /* Rounded corners */
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin: 25px;
+        text-align: center;
     }
-    nav ul .fa-solid{
+
+    nav ul .fa-solid {
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
     }
-    .sub-title{
+
+    .sub-title {
         font-size: 40px;
     }
-    .about-col-1, .about-col-2{
+
+    .about-col-1, .about-col-2 {
         flex-basis: 100%;
-    }
-    .about-col-1{
         margin-bottom: 30px;
     }
-    .about-col-2{
-        font-size: 14px;
-    }
-    .tab-links{
-        font-size: 16px;
-        margin-right: 20px;
-    }
-    .contact-left, .contact-right{
-        flex-basis: 100%;
-    }
-    .copyright{
-        font-size: 14px;
-    }
-}
-#msg{
-    color: #61b752;
-    margin-top: -40px;
-    display: block;
-}
 
+    .about-col-2 {
+        font-size: 14px;
+    }
+
+    .tab-title {
+        display:grid;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0 30px;
+    }
+
+    .tab-links {
+        margin-right: 100px;
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .contact-left, .contact-right {
+        flex-basis: 100%;
+        text-align: center;
+    }
+
+    .contact-left p {
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .contact-right form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .copyright {
+        font-size: 14px;
+    }
+
+    .hidden-items, .hidden-item {
+        max-width: 100%; /* Adjust to fit the screen */
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 40px;
+        margin-top: 50px;
+    }
+
+    .btn {
+        margin: 30px auto; /* Center button */
+    }
+}
